feat: add lab1 and hw3
