# БР1.2/Москалец Данила/homeworks/hw2/openapi.yaml
@@ -1015,6 +1015,18 @@ paths:
           in: query
           schema:
             type: boolean
+        - name: sort_by
+          in: query
+          schema:
+            type: string
+            enum: [price, rating, created_at]
+            default: created_at
+        - name: sort_order
+          in: query
+          schema:
+            type: string
+            enum: [asc, desc]
+            default: desc
       responses:
         200:
           description: Успешно
